--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Hyperblog   <span>   Tu blog de confianza
+            </span>
         </div>
         <div id="post"></div> </div>
         <h1> Este es el titulo atractivo e interesante del post</h1>
