--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,9 @@
         <div id="post"></div> </div>
         <h1> Este es el titulo atractivo e interesante del post</h1>
         <p> Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con las ramas</p>
+        <p>
+            Los blogs son la mejor forma de compartir tus opiniones e ideas mucho mejor que ir a conferencias
+        </p>
     </div> 
 </body>
 </html>
