--- a/blogpost.html
+++ b/blogpost.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenidos a Hiperblog 2.0</title>
-    <link rel="stylesheet" href="css/estilos.css"
-</head>
-<body>
-    <div id="container">
-        <div id="cabecera">
-            Hyperblog   <span>   Tu blog de confianza
-            </span>
-        </div>
-        <div id="post"></div> </div>
-        <h1> Este es el titulo atractivo e interesante del post</h1>
-        <p> Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con las ramas</p>
-        <p>
-            Los blogs son la mejor forma de compartir tus opiniones e ideas mucho mejor que ir a conferencias
-        </p>
-    </div> 
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Bienvenidos a Hiperblog 2.0</title>
+        <link rel="stylesheet" href="css/estilos.css"
+    </head>
+    <body>
+        <div id="container">
+            <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" />
+                Hyperblog  
+                <span id="Tagline">   Tu blog de cabecera </span>
+             </div>
+            <div id="post">
+                <h1> Este es el titulo atractivo e interesante del post</h1>
+                <p> Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con las ramas</p>
+                <p>Los blogs son la mejor forma de compartir tus opiniones e ideas mucho mejor que ir a conferencias.</p>
+                <p> Suscribete y dale like</p>
+            </div>
+        </div> 
+    </body>
 </html>
