--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
             <div id="post">
                 <h1> Este es el titulo atractivo e interesante del post</h1>
                 <p> Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con las ramas</p>
+                <p><img src="imagenes/battle1.jpg" width="75%" /></p>
                 <p>Los blogs son la mejor forma de compartir tus opiniones e ideas mucho mejor que ir a conferencias.</p>
                 <p> Suscribete y dale like</p>
             </div>
